// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<QuestionnaireAdminResultsRankingLine /> renders correctly empty ranking 1`] = `
<tr>
  <td>
    First choice
  </td>
  <td
    key="0"
  >
    0
  </td>
  <td
    key="1"
  >
    0
  </td>
  <td
    key="2"
  >
    0
  </td>
  <td
    key="3"
  >
    0
  </td>
  <td
    key="4"
  >
    0
  </td>
  <td
    key="5"
  >
    0
  </td>
</tr>
`;

exports[`<QuestionnaireAdminResultsRankingLine /> renders correctly full ranking 1`] = `
<tr>
  <td>
    First choice
  </td>
  <td
    key="0"
  >
    98
  </td>
  <td
    key="1"
  >
    8
  </td>
  <td
    key="2"
  >
    3
  </td>
</tr>
`;

exports[`<QuestionnaireAdminResultsRankingLine /> renders correctly half-filled ranking 1`] = `
<tr>
  <td>
    First choice
  </td>
  <td
    key="0"
  >
    0
  </td>
  <td
    key="1"
  >
    7897
  </td>
  <td
    key="2"
  >
    0
  </td>
  <td
    key="3"
  >
    68
  </td>
  <td
    key="4"
  >
    0
  </td>
  <td
    key="5"
  >
    403
  </td>
  <td
    key="6"
  >
    0
  </td>
</tr>
`;

exports[`<QuestionnaireAdminResultsRankingLine /> renders correctly one ranking 1`] = `
<tr>
  <td>
    First choice
  </td>
  <td
    key="0"
  >
    0
  </td>
  <td
    key="1"
  >
    0
  </td>
  <td
    key="2"
  >
    7897
  </td>
</tr>
`;
